--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="logo-container">
-            <div style="font-size: 3rem;">🇪🇺</div>
+            <img src="images/logo.png" alt="NTU ESA Logo" style="width: 80%; height: 80%; object-fit: contain;">
         </div>
         <h1 class="hero-title">臺灣大學歐洲同學會</h1>
         <h2 class="hero-subtitle">NTU European Student Association</h2>
@@ -556,7 +556,7 @@
                 <div class="team-grid">
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
-                        <div class="member-name">Thomas Müller</div>
+                        <div class="member-name">Moritz Sontheimer</div>
                         <div class="member-position">Former President</div>
                     </div>
                     <div class="member-card">
@@ -594,8 +594,8 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 NTU European Student Association. All rights reserved.</p>
-        <p>Bringing European vibes to NTU since 2020</p>
+        <p>&copy; 2025 NTU European Student Association. All rights reserved.</p>
+        <p>Bringing European vibes to Taipei since 2022</p>
     </footer>
 </body>
 </html>
