--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="logo-container">
-            <img src="images/logo.png" alt="NTU ESA Logo" style="width: 80%; height: 80%; object-fit: contain;">
+            <img src="images/logo.jpg" alt="NTU ESA Logo" style="width: 80%; height: 80%; object-fit: contain;">
         </div>
         <h1 class="hero-title">臺灣大學歐洲同學會</h1>
         <h2 class="hero-subtitle">NTU European Student Association</h2>
@@ -524,28 +524,30 @@
                 <h3>Active Organizing Members</h3>
                 <div class="team-grid">
                     <div class="member-card">
-                        <div class="member-avatar">👤</div>
-                        <div class="member-name">Robin Fischer</div>
+                        <div class="member-avatar">
+                            <img src="images/members/robin.jpg" alt="robin" style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <div class="member-name">Robin Fischer 羅賓</div>
                         <div class="member-position">President</div>
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
-                        <div class="member-name">Pierre Dubois</div>
-                        <div class="member-position">Vice President</div>
-                    </div>
+                        <div class="member-name">Dylan</div>
+                        <div class="member-position">Events Coordinator</div>
+                    </div>                    
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
-                        <div class="member-name">Sofia Romano</div>
+                        <div class="member-name">Michael</div>
                         <div class="member-position">Events Coordinator</div>
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
-                        <div class="member-name">Lars Nielsen</div>
-                        <div class="member-position">Treasurer</div>
+                        <div class="member-name">Maxi</div>
+                        <div class="member-position">Volunteer</div>
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
-                        <div class="member-name">Maria Silva</div>
+                        <div class="member-name">CW</div>
                         <div class="member-position">Social Media Manager</div>
                     </div>
                 </div>
@@ -557,17 +559,12 @@
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
                         <div class="member-name">Moritz Sontheimer</div>
-                        <div class="member-position">Former President</div>
+                        <div class="member-position">Former Vice President</div>
                     </div>
                     <div class="member-card">
                         <div class="member-avatar">👤</div>
-                        <div class="member-name">Elena Popov</div>
-                        <div class="member-position">Former VP</div>
-                    </div>
-                    <div class="member-card">
-                        <div class="member-avatar">👤</div>
-                        <div class="member-name">Johan Berg</div>
-                        <div class="member-position">Former Treasurer</div>
+                        <div class="member-name">Cathleen 林可晴</div>
+                        <div class="member-position">Former Social Media Manager</div>
                     </div>
                 </div>
             </div>
