--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="logo-container">
-            <img src="images/logo.jpg" alt="NTU ESA Logo" style="width: 80%; height: 80%; object-fit: contain;">
+            <img src="images/logo.png" alt="NTU ESA Logo" style="width: 80%; height: 80%; object-fit: contain;">
         </div>
         <h1 class="hero-title">臺灣大學歐洲同學會</h1>
         <h2 class="hero-subtitle">NTU European Student Association</h2>
@@ -557,7 +557,9 @@
                 <h3>Former Members</h3>
                 <div class="team-grid">
                     <div class="member-card">
-                        <div class="member-avatar">👤</div>
+                        <div class="member-avatar">
+                            <img src="images/members/mo.jpg" alt="mo" style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
                         <div class="member-name">Moritz Sontheimer</div>
                         <div class="member-position">Former Vice President</div>
                     </div>
